trying to prevent rectangle ad on mobile

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -13,7 +13,7 @@
 
 /* purgecss start ignore */
 .header-ad ins.leaderboard:not(:empty) {
-  margin: .25rem;
+  margin: .25rem auto;
 }
 
 .header-ad ins.leaderboard:empty {
